--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "dependencies": {
     "bindings": "1.1.0",
-    "eventemitter2": ">=0.4.11"
+    "eventemitter2": ">=0.4.11",
+    "nan": "^1.8.4",
+    "nav": "0.0.2"
   },
   "gypfile": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "preinstall": "node-gyp rebuild"
+    "postinstall": "node-gyp rebuild"
   },
   "repository": {
     "type": "git",
