--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,5 @@ $ cat .gitignore
 #*.swp
 
 # Can also ignore all directories and files in a directory.
-node_modules
-node_modules/**/*
-build/*
+node_modules/
+build/
