--- a/package.json
+++ b/package.json
@@ -1,24 +1,27 @@
 {
   "name": "usb-detection",
-  "version": "1.1.0",
-  "description": "List USB devices in system and detect changes on them.",
+  "version": "1.2.0",
+  "description": "Listen to USB devices and detect changes on them.",
   "main": "index.js",
   "dependencies": {
     "bindings": "1.1.0",
+    "bluebird": "^2.9.27",
     "eventemitter2": ">=0.4.11",
     "nan": "^1.8.4"
   },
   "gypfile": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --timeout 10000",
     "postinstall": "node-gyp rebuild"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/KABA-CCEAC/node-usb-detection.git"
+    "url": "git://github.com/MadLittleMods/node-usb-detection.git"
   },
   "keywords": [
     "usb",
+    "device",
+    "hardware",
     "list",
     "insert",
     "add",
@@ -28,12 +31,18 @@
     "unplug",
     "notification"
   ],
-  "homepage": "https://github.com/KABA-CCEAC/node-usb-detection",
+  "homepage": "https://github.com/MadLittleMods/node-usb-detection",
   "bugs": {
-    "url": "https://github.com/KABA-CCEAC/node-usb-detection/issues"
+    "url": "https://github.com/MadLittleMods/node-usb-detection/issues"
   },
   "license": {
     "type": "MIT",
-    "url": "https://raw.github.com/KABA-CCEAC/node-usb-detection/master/licence"
+    "url": "https://raw.github.com/MadLittleMods/node-usb-detection/master/licence"
+  },
+  "devDependencies": {
+    "chai": "^3.0.0",
+    "chai-as-promised": "^5.1.0",
+    "chalk": "^1.0.0",
+    "mocha": "^2.2.5"
   }
 }
