--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@ $ cat .gitignore
 # Can also ignore all directories and files in a directory.
 node_modules/
 build/
+
+# Ignore `prebuild` output
+prebuilds/
