--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "gypfile": true,
   "scripts": {
     "test": "mocha --timeout 10000",
-    "postinstall": "node-gyp rebuild"
+    "install": "prebuild-install || node-gyp rebuild",
+    "prebuild": "prebuild --all --strip --verbose"
   },
   "repository": {
     "type": "git",
@@ -37,12 +38,14 @@
     "bindings": "1.1.0",
     "bluebird": "^2.9.27",
     "eventemitter2": ">=0.4.11",
-    "nan": "^2.2.0"
+    "nan": "^2.2.0",
+    "prebuild-install": "^2.3.0"
   },
   "devDependencies": {
     "chai": "^3.0.0",
     "chai-as-promised": "^5.1.0",
     "chalk": "^1.0.0",
-    "mocha": "^2.2.5"
+    "mocha": "^2.2.5",
+    "prebuild": "^6.2.2"
   }
 }
