--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,10 @@ addons:
     sources:
     - ubuntu-toolchain-r-test
     packages:
-    - build-essential
-    - g++-4.8
     - g++-4.8-multilib
     - gcc-multilib
-sudo: true
+dist: trusty
+sudo: required
 
 # Build matrix
 os:
