--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,8 @@
-$ cat .gitignore
-
-# Can ignore specific files
 .settings.xml
 .monitor
 .DS_Store
 
-# Use wildcards as well
-*~
-#*.swp
-
-# Can also ignore all directories and files in a directory.
+npm-debug.log
 node_modules/
 build/
 
