--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "scripts": {
     "prepublishOnly": "validate",
     "validate": "eslint **/*.js && npm test",
-    "test": "mocha ./test/test.js --timeout 10000",
-
+    "test": "jasmine ./test/test.js",
     "prebuild": "prebuild --all --strip --verbose",
     "rebuild": "node-gyp rebuild"
   },
@@ -46,10 +45,9 @@
   },
   "devDependencies": {
     "chai": "^3.0.0",
-    "chai-as-promised": "^5.1.0",
     "chalk": "^1.0.0",
     "eslint": "^4.17.0",
-    "mocha": "^5.0.0",
+    "jasmine": "^2.9.0",
     "prebuild": "^6.2.2"
   }
 }
