--- a/package.json
+++ b/package.json
@@ -38,17 +38,17 @@
     "url": "https://raw.github.com/MadLittleMods/node-usb-detection/master/licence"
   },
   "dependencies": {
-    "bindings": "1.1.0",
-    "bluebird": "^2.9.27",
-    "eventemitter2": ">=0.4.11",
-    "nan": "^2.2.0",
-    "prebuild-install": "^2.3.0"
+    "bindings": "^1.3.0",
+    "bluebird": "^3.5.1",
+    "eventemitter2": "^5.0.1",
+    "nan": "^2.10.0",
+    "prebuild-install": "^2.5.3"
   },
   "devDependencies": {
-    "chai": "^3.0.0",
-    "chalk": "^1.0.0",
-    "eslint": "^4.17.0",
-    "jasmine": "^2.9.0",
-    "prebuild": "^6.2.2"
+    "chai": "^4.1.2",
+    "chalk": "^2.4.1",
+    "eslint": "^4.19.1",
+    "jasmine": "^3.1.0",
+    "prebuild": "^7.6.0"
   }
 }
