Add troubleshooting steps for missing Python 2

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "chalk": "^2.4.1",
     "eslint": "^4.19.1",
     "jasmine": "^3.1.0",
+    "node-gyp": "^3.6.2",
     "prebuild": "^7.6.0"
   }
 }
