--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "type": "MIT",
     "url": "https://raw.github.com/MadLittleMods/node-usb-detection/master/licence"
   },
+  "engines": {
+    "node" : ">=4" 
+  },
   "dependencies": {
     "bindings": "^1.3.0",
     "eventemitter2": "^5.0.1",
