Use native Promises (#69)
* Remove bluebird

* Update engines

--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
     "type": "MIT",
     "url": "https://raw.github.com/MadLittleMods/node-usb-detection/master/licence"
   },
+  "engines": {
+    "node" : ">=4" 
+  },
   "dependencies": {
     "bindings": "^1.3.0",
-    "bluebird": "^3.5.1",
     "eventemitter2": "^5.0.1",
     "nan": "^2.10.0",
     "prebuild-install": "^4.0.0"
