--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,8 @@ env:
   - TRAVIS_NODE_VERSION="6" ARCH="x86"
   - BINARY_BUILDER="true" TRAVIS_NODE_VERSION="8"
   - BINARY_BUILDER="true" TRAVIS_NODE_VERSION="8" ARCH="x86"
+  - BINARY_BUILDER="true" TRAVIS_NODE_VERSION="10"
+  - BINARY_BUILDER="true" TRAVIS_NODE_VERSION="12"
 matrix:
   exclude:
   - os: osx
@@ -54,10 +56,6 @@ before_install:
   fi;
 - $CXX --version
 
-# Cleanup the output of npm
-- npm config set progress false
-- npm config set spin false
-
 # print versions
 - uname -a
 - which node; file `which node`
@@ -74,7 +72,7 @@ before_install:
 
 install:
 # ensure source install works
-- npm install --build-from-source
+- npm install --build-from-source --no-progress
 
 script:
 - npm run lint
