--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,6 +8,8 @@ environment:
   - nodejs_version: "6"
   - binary_builder: "true"
     nodejs_version: "8"
+  - binary_builder: "true"
+    nodejs_version: "10"
 
 platform:
   - x86
