Add new Node versions to Travis and Appveyor

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ env:
   - BINARY_BUILDER="true" TRAVIS_NODE_VERSION="8" ARCH="x86"
   - BINARY_BUILDER="true" TRAVIS_NODE_VERSION="10"
   - BINARY_BUILDER="true" TRAVIS_NODE_VERSION="12"
+  - BINARY_BUILDER="true" TRAVIS_NODE_VERSION="13"
 matrix:
   exclude:
   - os: osx
