--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,6 +12,8 @@ environment:
     nodejs_version: "10"
   - binary_builder: "true"
     nodejs_version: "12"
+  - binary_builder: "true"
+    nodejs_version: "13"
 
 platform:
   - x86
