--- a/package.json
+++ b/package.json
@@ -46,13 +46,14 @@
     "bindings": "^1.3.0",
     "eventemitter2": "^5.0.1",
     "nan": "^2.13.2",
-    "prebuild-install": "^5.3.3"
+    "prebuild-install": "^5.3.5"
   },
   "devDependencies": {
     "chai": "^4.1.2",
     "chalk": "^2.4.1",
     "eslint": "^4.19.1",
     "jasmine": "^3.1.0",
+    "node-abi": "^2.18.0",
     "node-gyp": "^6.1.0",
     "prebuild": "^10.0.0"
   }
