chore(package.json): use SPDX identifier for MIT in license field

--- a/package.json
+++ b/package.json
@@ -35,10 +35,7 @@
   "bugs": {
     "url": "https://github.com/MadLittleMods/node-usb-detection/issues"
   },
-  "license": {
-    "type": "MIT",
-    "url": "https://raw.github.com/MadLittleMods/node-usb-detection/master/licence"
-  },
+  "license": "MIT",
   "engines": {
     "node": ">=4"
   },
