--- a/package.json
+++ b/package.json
@@ -40,9 +40,10 @@
     "node": ">=4"
   },
   "dependencies": {
+    "node-addon-api": "3.1.0",
     "bindings": "^1.5.0",
     "eventemitter2": "^5.0.1",
-    "nan": "^2.13.2",
+    "node-addon-api": "^3.1.0",
     "prebuild-install": "^6.0.0"
   },
   "devDependencies": {
