--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "types": "index.d.ts",
   "gypfile": true,
   "scripts": {
-    "install": "prebuild-install || node-gyp rebuild",
+    "install": "prebuild-install --runtime napi || node-gyp rebuild",
     "prepublishOnly": "npm run validate",
     "lint": "eslint **/*.js",
     "validate": "npm run lint && npm test",
     "test": "jasmine ./test/test.js",
-    "prebuild": "prebuild --all --strip --verbose",
+    "prebuild": "prebuild --all --strip --runtime napi --verbose",
     "rebuild": "node-gyp rebuild"
   },
   "repository": {
@@ -37,12 +37,17 @@
   },
   "license": "MIT",
   "engines": {
-    "node": ">=4"
+    "node": ">=10"
+  },
+  "binary": {
+    "napi_versions": [
+      3
+    ]
   },
   "dependencies": {
-    "node-addon-api": "^3.1.0",
     "bindings": "^1.5.0",
     "eventemitter2": "^5.0.1",
+    "node-addon-api": "^3.1.0",
     "prebuild-install": "^6.0.0"
   },
   "devDependencies": {
