--- a/.travis.yml
+++ b/.travis.yml
@@ -82,5 +82,5 @@ script:
 # if publishing, do it
 - >
   if [[ $PUBLISH_BINARY == true ]]; then
-    npm run prebuild;
+    npm run prebuild --v8_enable_pointer_compression=false --v8_enable_31bit_smis_on_64bit_arch=false;
   fi;
