--- a/.travis.yml
+++ b/.travis.yml
@@ -80,7 +80,4 @@ script:
 - echo "Skipping tests on CI, as they currently require manual interaction."
 
 # if publishing, do it
-- >
-  if [[ $PUBLISH_BINARY == true ]]; then
-    npm run prebuild --v8_enable_pointer_compression=false --v8_enable_31bit_smis_on_64bit_arch=false;
-  fi;
+- npm run prebuild
