--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "types": "index.d.ts",
   "gypfile": true,
   "scripts": {
+    "node-gyp": "node-gyp",
     "install": "prebuild-install || node-gyp rebuild",
     "prepublishOnly": "npm run validate",
     "lint": "eslint **/*.js",
